k8s/emucomp-gateway-service.yml
apiVersion: v1
kind: Service
metadata:
  name: emucomp-service
  namespace: default
  labels:
    app: emucomp
    service: emucomp
spec:
  type: ClusterIP
  selector:
    app: emucomp
  ports:
    - name: http
      port: 8080
      targetPort: 8080
      protocol: TCP
