k8s/service.yml
apiVersion: v1
kind: Service
metadata:
  name: emucomp-service
spec:
  type: ClusterIP
  selector:
    app: emucomp
  ports:
    - name: http
      port: 8080
      targetPort: 8080
      protocol: TCP
